--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,6 @@
       <button class="tab" data-view="generator" type="button">Generator</button>
 
       <button class="tab" data-view="agent" type="button">Agente</button>
-      <button class="tab" data-view="import" type="button">Import</button>
       <button class="tab" data-view="settings" type="button">Settings</button>
       <button class="tab" data-view="admin" type="button">Admin</button>
 
@@ -61,7 +60,6 @@
 
         <div class="row">
           <button class="btn" data-view="agent" type="button">Agente</button>
-          <button class="btn" data-view="import" type="button">Import</button>
           <button class="btn" data-view="admin" type="button">Admin</button>
           <button class="btn" id="btnOpenTools2" type="button">Ferramentas</button>
         </div>
@@ -166,42 +164,6 @@
       </div>
     </section>
 
-    <!-- IMPORT (RECEPTOR) -->
-    <section class="view" id="view-import">
-      <div class="card">
-        <h2>IMPORT • Receptor de Código</h2>
-        <p class="hint">
-          Cole aqui pacotes no formato Markdown com blocos do tipo:
-          <br><span class="mono small">```app.js</span> + código + <span class="mono small">```</span>
-          <br>Ele aplica no <b>APP ativo</b> (storage interno da Factory).
-        </p>
-
-        <div class="row">
-          <button class="btn primary" id="btnImportApply" type="button">Aplicar no app ativo</button>
-          <button class="btn ghost" id="btnImportClear" type="button">Limpar</button>
-          <button class="btn" id="btnImportExample" type="button">Exemplo</button>
-        </div>
-
-        <textarea id="importText" spellcheck="false" style="
-          width:100%;
-          min-height:42vh;
-          margin-top:10px;
-          resize: vertical;
-          border:1px solid rgba(255,255,255,.10);
-          background: rgba(0,0,0,.22);
-          color: rgba(255,255,255,.92);
-          border-radius: 12px;
-          padding: 12px;
-          font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-          font-size: 13px;
-          line-height: 1.45;
-          outline: none;
-        " placeholder="Cole seus blocos ```arquivo``` aqui..."></textarea>
-
-        <pre class="mono small" id="importOut">Pronto.</pre>
-      </div>
-    </section>
-
     <!-- SETTINGS -->
     <section class="view" id="view-settings">
       <div class="card">
@@ -280,11 +242,24 @@
   <!-- DOCK -->
   <div class="dock" id="dock">
     <button class="dockbtn" data-view="agent" type="button">Agent</button>
-    <button class="dockbtn" data-view="import" type="button">Import</button>
     <button class="dockbtn" data-view="admin" type="button">Admin</button>
     <button class="dockbtn" data-view="diagnostics" type="button">Diag</button>
     <button class="dockbtn" data-view="logs" type="button">Logs</button>
   </div>
+
+  <!-- ✅ REGISTRO DO SERVICE WORKER (SELF-UPDATE) -->
+  <script>
+    (function () {
+      if (!("serviceWorker" in navigator)) return;
+      navigator.serviceWorker.register("/sw.js").then(() => {
+        // primeira vez: pode precisar 1 reload pra pegar controller
+        // mas não força reload automático pra não te travar.
+        console.log("[RCF] SW registered");
+      }).catch((e) => {
+        console.warn("[RCF] SW register fail:", e);
+      });
+    })();
+  </script>
 
   <!-- CORE (ordem importa) -->
   <script src="core/logger.js"></script>
@@ -309,120 +284,10 @@
   <script src="core/admin.js"></script>
   <script src="core/ai.builder.js"></script>
 
+  <!-- ✅ VFS overrides (mãe autoaplica nela mesma) -->
+  <script src="core/vfs_overrides.js"></script>
+
   <!-- APP (por último) -->
   <script src="app.js"></script>
-
-  <!-- Importer inline (não depende de pasta nova) -->
-  <script>
-    (function(){
-      "use strict";
-      const $ = (id) => document.getElementById(id);
-
-      function setOut(t){
-        const o = $("importOut");
-        if (o) o.textContent = String(t || "");
-      }
-
-      function getActiveApp(){
-        const R = window.RCF;
-        const st = R && R.state;
-        if (!st || !st.active || !st.apps) return null;
-        if (!st.active.appSlug) return null;
-        return st.apps.find(a => a.slug === st.active.appSlug) || null;
-      }
-
-      function ensureFiles(app){
-        if (!app.files || typeof app.files !== "object") app.files = {};
-      }
-
-      function parseBlocks(text){
-        const s = String(text || "");
-        const blocks = [];
-        const re = /```([a-zA-Z0-9_.\-\/]+)\n([\s\S]*?)```/g;
-        let m;
-        while ((m = re.exec(s))) {
-          blocks.push({ file: m[1].trim(), content: m[2] });
-        }
-        return blocks;
-      }
-
-      function applyImport(){
-        const txt = $("importText");
-        const raw = txt ? txt.value : "";
-        const blocks = parseBlocks(raw);
-
-        if (!blocks.length) {
-          setOut("⚠️ Nenhum bloco encontrado. Use o formato:\n```app.js\\n...\\n```");
-          return;
-        }
-
-        const app = getActiveApp();
-        if (!app) {
-          setOut("❌ Sem app ativo. Vá em New App/Apps salvos e selecione um app antes.");
-          return;
-        }
-
-        ensureFiles(app);
-
-        let changed = 0;
-        const applied = [];
-        blocks.forEach(b => {
-          if (!b.file) return;
-          app.files[b.file] = String(b.content || "");
-          changed++;
-          applied.push(b.file);
-        });
-
-        // salva via Storage do app.js (se existir)
-        try {
-          if (window.RCF && window.RCF.state) {
-            // app.js salva automaticamente em vários pontos, mas aqui forçamos um log e deixamos o usuário salvar no editor se quiser
-            if (typeof window.RCF.log === "function") {
-              window.RCF.log("IMPORT applied:", applied.join(", "));
-            }
-          }
-        } catch {}
-
-        setOut("✅ Import aplicado no app ativo: " + app.slug + "\nArquivos:\n- " + applied.join("\n- ") + "\n\nAgora vá no Editor e confira.");
-      }
-
-      function setExample(){
-        const ex =
-`Cole blocos assim:
-
-\`\`\`index.html
-<!doctype html>
-<html><body><h1>Hello</h1></body></html>
-\`\`\`
-
-\`\`\`app.js
-console.log("ok");
-\`\`\`
-`;
-        const txt = $("importText");
-        if (txt) txt.value = ex;
-        setOut("Exemplo carregado. Agora você pode substituir pelo seu pacote.");
-      }
-
-      function bind(){
-        const a = $("btnImportApply");
-        const c = $("btnImportClear");
-        const e = $("btnImportExample");
-
-        if (a) a.addEventListener("click", applyImport, { passive:false });
-        if (c) c.addEventListener("click", function(){
-          const t = $("importText"); if (t) t.value = "";
-          setOut("Limpo.");
-        }, { passive:false });
-        if (e) e.addEventListener("click", setExample, { passive:false });
-      }
-
-      if (document.readyState === "loading") {
-        document.addEventListener("DOMContentLoaded", bind);
-      } else {
-        bind();
-      }
-    })();
-  </script>
 </body>
 </html>
