--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,41 @@
           <button class="btn danger" id="btnAdminDiscard" type="button">Descartar</button>
         </div>
 
-        <h2>Plano + Sugestão</h2>
+        <hr style="border:0;border-top:1px solid rgba(255,255,255,.10);margin:14px 0">
+
+        <h2>MAINTENANCE • Self-Update (Mãe)</h2>
+        <p class="hint">
+          Aplica overrides por cima do site (no iPhone) via Service Worker.
+          Se quebrar, use Rollback.
+        </p>
+
+        <div class="row">
+          <button class="btn ok" id="btnMotherApplyImport" type="button">Aplicar /import/mother_bundle.json</button>
+          <button class="btn danger" id="btnMotherRollback" type="button">Rollback overrides</button>
+        </div>
+
+        <div class="hint" style="margin-top:10px">Ou cole um bundle JSON aqui:</div>
+        <textarea id="motherBundleText" spellcheck="false" style="
+          width:100%;
+          min-height:140px;
+          resize: vertical;
+          border:1px solid rgba(255,255,255,.10);
+          background: rgba(0,0,0,.22);
+          color: rgba(255,255,255,.92);
+          border-radius: 12px;
+          padding: 12px;
+          font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+          font-size: 12px;
+          line-height: 1.4;
+          outline: none;
+          margin-top:8px;
+        " placeholder='{"files":{"/app.js":"...","/core/ui_bindings.js":"..."}}'></textarea>
+
+        <div class="row" style="margin-top:10px">
+          <button class="btn ok" id="btnMotherApplyPaste" type="button">Aplicar bundle colado</button>
+        </div>
+
+        <h2 style="margin-top:14px">Plano + Sugestão</h2>
         <pre class="mono" id="adminOut">Pronto.</pre>
       </div>
     </section>
@@ -252,8 +286,6 @@
     (function () {
       if (!("serviceWorker" in navigator)) return;
       navigator.serviceWorker.register("/sw.js").then(() => {
-        // primeira vez: pode precisar 1 reload pra pegar controller
-        // mas não força reload automático pra não te travar.
         console.log("[RCF] SW registered");
       }).catch((e) => {
         console.warn("[RCF] SW register fail:", e);
@@ -286,6 +318,9 @@
 
   <!-- ✅ VFS overrides (mãe autoaplica nela mesma) -->
   <script src="core/vfs_overrides.js"></script>
+
+  <!-- ✅ Maintenance / Self-update UI (Admin) -->
+  <script src="core/mother_selfupdate.js"></script>
 
   <!-- APP (por último) -->
   <script src="app.js"></script>
