--- a/app/index.html
+++ b/app/index.html
@@ -291,7 +291,7 @@
        - NÃO carregar core/ui_bindings.js agora (conflita com app.js e mata clique)
        - admin.js fica por último porque ele injeta a MAE e instala capture delegation
   -->
-  <script src="core/admin.js"></script>
+ <script src="js/admin.js"></script>
 
   <!-- (opcionais para depois; se ligar, liga um por vez) -->
   <!-- <script src="core/ui_safety.js"></script> -->
