--- a/app/index.html
+++ b/app/index.html
@@ -268,6 +268,7 @@
   <script src="js/core/autofix.js"></script>
 
   <!-- ADMIN + AI (fora de core) -->
+  <script src="app/js/core/thompson.js"></script>
   <script src="js/admin.js"></script>
   <script src="js/ai.builder.js"></script>
 
