--- a/app/index.html
+++ b/app/index.html
@@ -266,7 +266,7 @@
 
   <script src="js/core/selfheal.js"></script>
   <script src="js/core/autofix.js"></script>
-<script src="app/js/core/thompson.js"></script>
+<script src="js/core/thompson.js"></script>
   <!-- ADMIN + AI (fora de core) -->
   <script src="js/admin.js"></script>
   <script src="js/ai.builder.js"></script>
