--- a/app/index.html
+++ b/app/index.html
@@ -247,7 +247,7 @@
     <button class="dockbtn" data-view="logs" type="button">Logs</button>
   </div>
 
-  <!-- CORE (ordem importa) -->
+    <!-- CORE (ordem importa) -->
   <script src="js/core/logger.js"></script>
   <script src="js/core/storage.js"></script>
   <script src="js/core/errors.js"></script>
@@ -266,7 +266,11 @@
 
   <script src="js/core/selfheal.js"></script>
   <script src="js/core/autofix.js"></script>
-<script src="js/core/thompson.js"></script>
+
+  <!-- THOMPSON + MÃE (sempre nesta ordem) -->
+  <script src="js/core/thompson.js"></script>
+  <script src="js/core/mother_selfupdate.js"></script>
+
   <!-- ADMIN + AI (fora de core) -->
   <script src="js/admin.js"></script>
   <script src="js/ai.builder.js"></script>
