--- a/app/index.html
+++ b/app/index.html
@@ -247,38 +247,37 @@
     <button class="dockbtn" data-view="logs" type="button">Logs</button>
   </div>
 
- <!-- CORE (ordem importa) -->
-<script src="js/core/logger.js"></script>
-<script src="js/core/storage.js"></script>
+   <!-- CORE (ordem importa) -->
+  <script src="js/core/logger.js"></script>
+  <script src="js/core/storage.js"></script>
+  <script src="js/core/errors.js"></script>
+  <script src="js/core/policy.js"></script>
+  <script src="js/core/risk.js"></script>
 
-<!-- overrides / vfs cedo (antes do resto usar fetch/reads) -->
-<script src="js/core/vfs_overrides.js"></script>
+  <script src="js/core/snapshot.js"></script>
+  <script src="js/core/patch.js"></script>
+  <script src="js/core/patchset.js"></script>
 
-<script src="js/core/errors.js"></script>
-<script src="js/core/policy.js"></script>
-<script src="js/core/risk.js"></script>
+  <script src="js/core/diagnostics.js"></script>
+  <script src="js/core/commands.js"></script>
 
-<script src="js/core/snapshot.js"></script>
-<script src="js/core/patch.js"></script>
-<script src="js/core/patchset.js"></script>
+  <script src="js/core/ui_safety.js"></script>
+  <script src="js/core/ui_bindings.js"></script>
 
-<script src="js/core/diagnostics.js"></script>
-<script src="js/core/commands.js"></script>
+  <script src="js/core/selfheal.js"></script>
+  <script src="js/core/autofix.js"></script>
 
-<script src="js/core/ui_safety.js"></script>
-<script src="js/core/ui_bindings.js"></script>
+  <!-- NOVO: Preview Runner + Export -->
+  <script src="js/core/preview_runner.js"></script>
 
-<script src="js/core/selfheal.js"></script>
-<script src="js/core/autoFix.js"></script>
+  <!-- Thompson (já está OK você manter aqui) -->
+  <script src="js/core/thompson.js"></script>
 
-<!-- Thompson (motor do bundle) -->
-<script src="js/core/thompson.js"></script>
+  <!-- ADMIN + AI (fora de core) -->
+  <script src="js/admin.js"></script>
+  <script src="js/ai.builder.js"></script>
 
-<!-- Mãe UI (fora do core) -->
-<script src="js/admin.js"></script>
-<script src="js/ai.builder.js"></script>
-
-<!-- APP (por último) -->
-<script src="app.js"></script>
+  <!-- APP (por último) -->
+  <script src="app.js"></script>
 </body>
 </html>
