--- a/app/index.html
+++ b/app/index.html
@@ -257,14 +257,8 @@
 <script src="js/core/snapshot.js"></script>
 <script src="js/core/patch.js"></script>
 <script src="js/core/patchset.js"></script>
-
-<script src="js/core/vfs_overrides.js"></script>
-<script src="js/core/mother_selfupdate.js"></script>
-
 <script src="js/core/diagnostics.js"></script>
 <script src="js/core/commands.js"></script>
-
-<script src="js/core/thompson.js"></script>
 
 <script src="js/core/ui_safety.js"></script>
 <script src="js/core/ui_bindings.js"></script>
@@ -272,11 +266,16 @@
 <script src="js/core/selfheal.js"></script>
 <script src="js/core/autofix.js"></script>
 
-<!-- APP (fora do core) -->
+<script src="js/core/vfs_overrides.js"></script>
+
+<script src="js/core/thompson.js"></script>
+<script src="js/core/publish_queue.js"></script>
+<script src="js/core/mother_selfupdate.js"></script>
+
 <script src="js/admin.js"></script>
 <script src="js/ai.builder.js"></script>
 
-<!-- APP (por último) -->
+  <!-- APP (por último) -->
 <script src="app.js"></script>
 </body>
 </html>
