--- a/app/index.html
+++ b/app/index.html
@@ -247,35 +247,37 @@
     <button class="dockbtn" data-view="logs" type="button">Logs</button>
   </div>
 
-<!-- CORE -->
-<script src="js/core/logger.js"></script>
-<script src="js/core/storage.js"></script>
-<script src="js/core/errors.js"></script>
-<script src="js/core/policy.js"></script>
-<script src="js/core/risk.js"></script>
+  <!-- CORE (ordem importa) -->
+  <script src="core/logger.js"></script>
+  <script src="core/storage.js"></script>
+  <script src="core/errors.js"></script>
+  <script src="core/policy.js"></script>
+  <script src="core/risk.js"></script>
 
-<script src="js/core/snapshot.js"></script>
-<script src="js/core/patch.js"></script>
-<script src="js/core/patchset.js"></script>
-<script src="js/core/diagnostics.js"></script>
-<script src="js/core/commands.js"></script>
+  <script src="core/snapshot.js"></script>
+  <script src="core/patch.js"></script>
+  <script src="core/patchset.js"></script>
 
-<script src="js/core/ui_safety.js"></script>
-<script src="js/core/ui_bindings.js"></script>
+  <script src="core/diagnostics.js"></script>
+  <script src="core/commands.js"></script>
 
-<script src="js/core/selfheal.js"></script>
-<script src="js/core/autofix.js"></script>
+  <script src="core/ui_safety.js"></script>
+  <script src="core/ui_bindings.js"></script>
 
-<script src="js/core/vfs_overrides.js"></script>
+  <!-- OVERRIDES + THOMPSON + MÃE -->
+  <script src="core/vfs_overrides.js"></script>
+  <script src="core/thompson.js"></script>
+  <script src="js/core/mother_selfupdate.js"></script>
 
-<script src="js/core/thompson.js"></script>
-<script src="js/core/publish_queue.js"></script>
-<script src="js/core/mother_selfupdate.js"></script>
+  <script src="core/selfheal.js"></script>
+  <script src="core/autofix.js"></script>
 
-<script src="js/admin.js"></script>
-<script src="js/ai.builder.js"></script>
+  <!-- ADMIN (lembrando: o seu é app/js/admin.js) -->
+  <script src="app/js/admin.js"></script>
+
+  <script src="core/ai.builder.js"></script>
 
   <!-- APP (por último) -->
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
