--- a/app/index.html
+++ b/app/index.html
@@ -5,63 +5,57 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#070b12" />
   <title>RControl Factory</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="styles.css" />
+
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="styles.css?v=20260210_3" />
 </head>
 
-<body>
+<body id="rcfMotherBox">
+  <!-- TOPBAR / UI -->
   <header class="topbar">
     <div class="brand">
       <div class="dot"></div>
       <div class="brand-text">
         <div class="title">RControl Factory</div>
         <div class="subtitle">Factory interna • PWA • Offline-first</div>
-        <div class="subtitle">
-          <a href="#" style="color:rgba(255,255,255,.65);text-decoration:none;">Privacidade</a>
-          •
-          <a href="#" style="color:rgba(255,255,255,.65);text-decoration:none;">Termos</a>
-        </div>
       </div>
     </div>
 
-    <div class="tabs">
-      <button class="tab active" data-view="dashboard" type="button">Dashboard</button>
+    <nav class="tabs" id="tabs">
+      <button class="tab" data-view="dashboard" type="button">Dashboard</button>
       <button class="tab" data-view="newapp" type="button">New App</button>
       <button class="tab" data-view="editor" type="button">Editor</button>
       <button class="tab" data-view="generator" type="button">Generator</button>
-
       <button class="tab" data-view="agent" type="button">Agente</button>
-      <button class="tab" data-view="settings" type="button">Settings</button>
-      <button class="tab" data-view="admin" type="button">Admin</button>
-
       <div class="spacer"></div>
 
-      <div class="status-pill" id="statusPill">
-        <span class="ok" id="statusText">OK ✅</span>
+      <div class="status-pill">
+        <span id="statusText">OK</span>
+        <span class="ok">✅</span>
       </div>
 
-      <button class="gear" id="btnOpenTools" aria-label="Ferramentas" type="button">⚙️</button>
-    </div>
+      <button class="gear" id="btnTools" type="button">⚙️</button>
+    </nav>
   </header>
 
+  <!-- CONTEÚDO -->
   <main class="container" id="app">
-
-    <!-- DASHBOARD -->
+    <!-- Dashboard -->
     <section class="view active" id="view-dashboard">
       <div class="card hero">
         <h1>Bem-vindo 👋</h1>
         <p>Crie apps e publique depois (primeiro vamos estabilizar).</p>
 
         <div class="row">
-          <button class="btn primary" id="btnCreateNewApp" type="button">+ Criar novo app</button>
-          <button class="btn ghost" id="btnOpenEditor" type="button">Abrir Editor</button>
-          <button class="btn ghost" id="btnExportBackup" type="button">Exportar backup</button>
+          <button class="btn primary" id="btnCreateApp" type="button">+ Criar novo app</button>
+          <button class="btn" id="btnOpenEditor" type="button">Abrir Editor</button>
+          <button class="btn" id="btnExportBackup" type="button">Exportar backup</button>
         </div>
 
         <div class="row">
           <button class="btn" data-view="agent" type="button">Agente</button>
           <button class="btn" data-view="admin" type="button">Admin</button>
-          <button class="btn" id="btnOpenTools2" type="button">Ferramentas</button>
+          <button class="btn" data-view="tools" type="button">Ferramentas</button>
         </div>
       </div>
 
@@ -76,169 +70,132 @@
         <h2>Status</h2>
         <div class="status-box">
           <div class="badge">Pronto ✅</div>
-          <div class="hint" id="statusHint">Factory carregada.</div>
+          <div class="hint" id="statusBoxHint">Factory carregada.</div>
         </div>
       </div>
     </section>
 
-    <!-- NEW APP -->
+    <!-- New App -->
     <section class="view" id="view-newapp">
       <div class="card">
         <h2>Novo App</h2>
         <p class="hint">Crie um app (nome + slug). Depois você vai para o Editor.</p>
-
         <div class="form">
-          <div class="row">
+          <div class="row" style="width:100%">
             <input id="newAppName" placeholder="Nome (ex: MeuApp)" />
           </div>
-          <div class="row">
+          <div class="row" style="width:100%">
             <input id="newAppSlug" placeholder="Slug (ex: meuapp)" />
           </div>
           <div class="row">
-            <button class="btn primary" id="btnDoCreateApp" type="button">Criar</button>
-            <button class="btn ghost" id="btnAutoSlug" type="button">Gerar slug</button>
+            <button class="btn primary" id="btnNewAppCreate" type="button">Criar</button>
+            <button class="btn" id="btnNewAppSlug" type="button">Gerar slug</button>
           </div>
+          <pre class="mono small" id="newAppOut">Pronto.</pre>
         </div>
-
-        <pre class="mono small" id="newAppOut"></pre>
       </div>
     </section>
 
-    <!-- EDITOR -->
+    <!-- Editor -->
     <section class="view" id="view-editor">
       <div class="card">
         <h2>Editor</h2>
         <p class="hint">Edite arquivos do app ativo e salve.</p>
 
         <div class="row">
-          <div class="status-pill"><span class="ok" id="activeAppText">Sem app ativo ✅</span></div>
+          <div class="badge" id="activeAppBadge">Sem app ativo</div>
           <button class="btn ok" id="btnSaveFile" type="button">Salvar arquivo</button>
           <button class="btn danger" id="btnResetFile" type="button">Reset arquivo</button>
         </div>
 
-        <div class="files" id="filesList">
-          <div class="hint">Selecione um app para ver arquivos.</div>
-        </div>
+        <div class="files" id="filesList"></div>
 
         <div class="editor">
-          <div class="editor-head" id="editorHead">Arquivo atual: —</div>
-          <textarea id="fileContent" spellcheck="false" placeholder="Conteúdo do arquivo..."></textarea>
+          <div class="editor-head" id="currentFileLabel">Arquivo atual: —</div>
+          <textarea id="fileContent" spellcheck="false"></textarea>
         </div>
 
-        <pre class="mono small" id="editorOut"></pre>
+        <pre class="mono small" id="editorOut">Pronto.</pre>
       </div>
     </section>
 
-    <!-- GENERATOR -->
+    <!-- Generator -->
     <section class="view" id="view-generator">
       <div class="card">
         <h2>Generator</h2>
         <p class="hint">Gera ZIP/Export (stub). Vamos ligar isso depois.</p>
+
         <div class="row">
-          <button class="btn primary" id="btnGenZip" type="button">Gerar ZIP</button>
-          <button class="btn ghost" id="btnGenPreview" type="button">Preview</button>
+          <button class="btn primary" id="btnExportBuild" type="button">Export Build (bundle)</button>
+          <button class="btn" id="btnPreviewApp" type="button">Preview App</button>
         </div>
-        <pre class="mono small" id="genOut"></pre>
+
+        <pre class="mono small" id="generatorOut">Pronto.</pre>
       </div>
     </section>
 
-    <!-- AGENT -->
+    <!-- Agent -->
     <section class="view" id="view-agent">
       <div class="card">
-        <h2>AGENT • Criador de Apps</h2>
-        <p class="hint">Você dá comandos. Ele monta uma sugestão (patch) e você aprova.</p>
+        <h2>Agente</h2>
+        <p class="hint">Comandos naturais + atalhos. (vamos evoluir com os prompts)</p>
 
         <div class="cmd">
-          <input id="agentCmd" placeholder="Digite um comando... (ex: help, list, show)" />
+          <input id="agentInput" placeholder="Ex: cria um app chamado AgroControl" />
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top:10px">
           <button class="btn primary" id="btnAgentRun" type="button">Executar</button>
-          <button class="btn ghost" id="btnAgentClear" type="button">Limpar</button>
-          <button class="btn ok" id="btnAgentApprove" type="button">Aprovar sugestão</button>
-          <button class="btn danger" id="btnAgentDiscard" type="button">Descartar sugestão</button>
+          <button class="btn" id="btnAgentClear" type="button">Limpar</button>
+          <button class="btn ok" id="btnAgentApply" type="button">Aplicar sugestão</button>
+          <button class="btn danger" id="btnAgentDiscard" type="button">Descartar</button>
         </div>
 
-        <h2>Resultado</h2>
         <pre class="mono" id="agentOut">Pronto.</pre>
       </div>
     </section>
 
-    <!-- SETTINGS -->
-    <section class="view" id="view-settings">
-      <div class="card">
-        <h2>Settings</h2>
-        <p class="hint">Configurações básicas (stub).</p>
-        <pre class="mono small">Em breve: modo auto/safe, storage, rede.</pre>
-      </div>
-    </section>
-
-    <!-- ADMIN -->
+    <!-- Admin -->
     <section class="view" id="view-admin">
       <div class="card">
-        <h2>ADMIN • IA Offline v2 (70%)</h2>
-        <p class="hint">Ajuda a atualizar a Factory (corrigir UI, melhorar ações). Você aprova manualmente.</p>
-
+        <h2>Admin</h2>
+        <p class="hint">Diagnóstico / manutenção / self-update.</p>
         <div class="row">
-          <button class="btn primary" id="btnAdminDiag" type="button">Executar</button>
-          <button class="btn ghost" id="btnAdminClear" type="button">Limpar</button>
-          <button class="btn ok" id="btnAdminApply" type="button">Aplicar sugestão</button>
-          <button class="btn danger" id="btnAdminDiscard" type="button">Descartar</button>
+          <button class="btn" id="btnAdminDiag" type="button">Diagnosticar</button>
+          <button class="btn danger" id="btnAdminReset" type="button">Zerar (safe)</button>
         </div>
-
-        <h2>Plano + Sugestão</h2>
-        <pre class="mono" id="adminOut">Pronto.</pre>
+        <pre class="mono small" id="adminOut">Pronto.</pre>
       </div>
-      <!-- A MÃE (MAINTENANCE) É INJETADA AQUI PELO app/js/admin.js -->
+      <!-- A “Mãe” entra aqui via js/core/mother_selfupdate.js -->
     </section>
 
-    <!-- DIAGNOSTICS -->
+    <!-- Diagnostics -->
     <section class="view" id="view-diagnostics">
       <div class="card">
-        <h2>DIAG • Diagnóstico</h2>
-        <p class="hint">Painel de diagnóstico rápido do Factory (logs, storage, integridade).</p>
-
+        <h2>Diag</h2>
         <div class="row">
-          <button class="btn primary" id="btnDiagRun" type="button">Executar diagnóstico</button>
-          <button class="btn ghost" id="btnDiagClear" type="button">Limpar</button>
+          <button class="btn" id="btnDiagRefresh" type="button">Atualizar</button>
+          <button class="btn" id="btnDiagCopy" type="button">Copiar</button>
+          <button class="btn danger" id="btnDiagClear" type="button">Limpar</button>
         </div>
-
-        <pre class="mono" id="diagOut">Pronto.</pre>
+        <pre class="mono small" id="diagBox">Diag…</pre>
       </div>
     </section>
 
-    <!-- LOGS -->
+    <!-- Logs -->
     <section class="view" id="view-logs">
       <div class="card">
         <h2>LOGS • Registro</h2>
         <p class="hint">Visualização dedicada dos logs do Factory.</p>
-
         <div class="row">
           <button class="btn" id="btnLogsRefresh" type="button">Atualizar</button>
           <button class="btn" id="btnLogsCopy" type="button">Copiar</button>
           <button class="btn danger" id="btnLogsClear" type="button">Limpar</button>
         </div>
-
-        <pre class="mono" id="logsOut">Logs...</pre>
+        <pre class="mono small" id="logsBox">Logs…</pre>
       </div>
     </section>
-
   </main>
-
-  <!-- TOOLS DRAWER -->
-  <aside class="tools" id="toolsDrawer" aria-hidden="true">
-    <div class="tools-head">
-      <b>Ferramentas</b>
-      <button class="btn small" id="btnCloseTools" type="button">Fechar</button>
-    </div>
-    <div class="tools-body">
-      <div class="row">
-        <button class="btn" id="btnClearLogs" type="button">Limpar logs</button>
-        <button class="btn" id="btnCopyLogs" type="button">Copiar logs</button>
-      </div>
-      <pre class="mono small" id="logsBox">Logs...</pre>
-    </div>
-  </aside>
 
   <!-- DOCK -->
   <div class="dock" id="dock">
@@ -248,31 +205,63 @@
     <button class="dockbtn" data-view="logs" type="button">Logs</button>
   </div>
 
-  <!-- CORE (ordem importa) -->
-  <script src="core/logger.js"></script>
-  <script src="core/storage.js"></script>
-  <script src="core/errors.js"></script>
-  <script src="core/policy.js"></script>
-  <script src="core/risk.js"></script>
+  <!-- ========= BOOT LOGGER (bem cedo) ========= -->
+  <script>
+    (function(){
+      try {
+        window.__RCF_BOOT = window.__RCF_BOOT || [];
+        const push = (m)=>window.__RCF_BOOT.push("BOOT: " + m);
+        push("index.html carregou");
+      } catch {}
+    })();
+  </script>
 
-  <script src="core/snapshot.js"></script>
-  <script src="core/patch.js"></script>
-  <script src="core/patchset.js"></script>
+  <!-- ========= CORE (ORDEM IMPORTA) ========= -->
+  <script src="js/core/logger.js?v=20260210_3"></script>
+  <script src="js/core/storage.js?v=20260210_3"></script>
+  <script src="js/core/errors.js?v=20260210_3"></script>
+  <script src="js/core/policy.js?v=20260210_3"></script>
+  <script src="js/core/risk.js?v=20260210_3"></script>
 
-  <script src="core/diagnostics.js"></script>
-  <script src="core/commands.js"></script>
+  <script src="js/core/snapshot.js?v=20260210_3"></script>
+  <script src="js/core/patch.js?v=20260210_3"></script>
+  <script src="js/core/patchset.js?v=20260210_3"></script>
 
-  <script src="core/ui_safety.js"></script>
-  <script src="core/ui_bindings.js"></script>
+  <script src="js/core/diagnostics.js?v=20260210_3"></script>
+  <script src="js/core/commands.js?v=20260210_3"></script>
 
-  <script src="core/selfheal.js"></script>
-  <script src="core/autofix.js"></script>
+  <script src="js/core/ui_safety.js?v=20260210_3"></script>
+  <script src="js/core/ui_bindings.js?v=20260210_3"></script>
 
-  <!-- THOMPSON + ADMIN (MÃE) -->
-  <script src="app/js/core/thompson.js"></script>
-  <script src="app/js/admin.js"></script>
+  <script src="js/core/selfheal.js?v=20260210_3"></script>
+  <script src="js/core/autofix.js?v=20260210_3"></script>
 
-  <!-- APP (por último) -->
-  <script src="app.js"></script>
+  <!-- overrides + thompson + mãe -->
+  <script src="js/core/vfs_overrides.js?v=20260210_3"></script>
+  <script src="js/core/thompson.js?v=20260210_3"></script>
+  <script src="js/core/mother_selfupdate.js?v=20260210_3"></script>
+
+  <!-- ========= ADMIN + AI ========= -->
+  <script src="js/admin.js?v=20260210_3"></script>
+  <script src="js/ai.builder.js?v=20260210_3"></script>
+
+  <!-- ========= APP (POR ÚLTIMO) ========= -->
+  <script src="app.js?v=20260210_3"></script>
+
+  <!-- ========= SERVICE WORKER (robusto) ========= -->
+  <script>
+    (function(){
+      async function regSW(){
+        if (!("serviceWorker" in navigator)) return;
+        try {
+          const reg = await navigator.serviceWorker.register("sw.js?v=20260210_3", { scope: "./" });
+          console.log("[RCF] SW registered:", reg.scope);
+        } catch (e) {
+          console.log("[RCF] SW register fail:", e && e.message ? e.message : e);
+        }
+      }
+      regSW();
+    })();
+  </script>
 </body>
 </html>
